# Bifrost

./: .gitignore
Login server/: login.py
Login server/instance/: users.db
Login server/templates/: page1.html  page2.html  page3.html  page4.html  page5.html  page_exchange.html
bifrost/: CMakeLists.txt
bifrost/include/: DiffieHellman.hpp  ECDH.hpp  HMAC-SHA1.hpp  MathFns.hpp  Random.hpp  TypeDefs.hpp
bifrost/src/: DiffieHellman.cpp  ECDH.cpp  HMAC-SHA1.cpp  MathFns.cpp  Random.cpp  bifrost.cpp
resources/: websites
